--- a/index.html
+++ b/index.html
@@ -38,12 +38,12 @@
     
     <!-- Logo + Responsive Img -->
     <div class="container py-3">
-      <div class="row w-100">
+      <div class="row">
         <div class="col-sm-3 col-12">
-          <img class="w-100 mx-auto" src="assets/img/bootstrap-solid.svg" height="100px" alt="" />
+          <img class="mx-auto" src="https://placehold.it/300x175&amp;text=LOGO" height="100px" alt="" />
         </div>
         <div class="col-sm col-12">
-          <div class="w-100 h-100 bg-secondary"></div>
+          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement for deep fried Twinkies">
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@
         <div class="row no-gutters">
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -94,7 +94,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -104,7 +104,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -114,7 +114,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -124,7 +124,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
@@ -134,7 +134,7 @@
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="assets/img/bootstrap-solid.svg" width="100%" alt="" class="card-img-top" />
+              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
                 <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
