--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
     <!-- Divided -->
     <div class="row">
       <!-- Article -->
-      <div class="col-12 col-md-8">
+      <div class="col-12 col-md-9">
         <!-- Breadcrumbs -->
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb p-3 bg-light">
@@ -81,7 +81,7 @@
         <!-- End Breadcrumbs -->
 
         <!-- List Article -->
-        <div class="row no-gutters">
+        <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
               <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
@@ -160,7 +160,7 @@
       <!-- End Article -->
 
       <!-- Sidebar -->
-      <aside class="col-12 col-md-4">
+      <aside class="col-12 col-md-3">
         <!-- Popular Post -->
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
