--- a/index.html
+++ b/index.html
@@ -165,11 +165,11 @@
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
           <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center">Cras justo odio</li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Lorem ipsum</li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Dapibus ac facilisis in</li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Morbi leo risus</li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Dolor sit amet</li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Cras justo odio</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Lorem ipsum</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dapibus ac facilisis in</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Morbi leo risus</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dolor sit amet</a></li>
           </ul>
         </section>
         <!-- End Popular Post -->
@@ -178,12 +178,12 @@
         <section id="label">
           <h5 class="bg-light card-header p-3 rounded">Label</h5>
           <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center">Movies<span class="badge badge-primary badge-pill">14</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Games<span class="badge badge-primary badge-pill">2</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Aplication<span class="badge badge-primary badge-pill">1</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Life Hacks<span class="badge badge-primary badge-pill">14</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Games<span class="badge badge-primary badge-pill">2</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center">Aplication<span class="badge badge-primary badge-pill">1</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Movies</a><span class="badge badge-primary badge-pill">14</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Games</a><span class="badge badge-primary badge-pill">2</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Life Hacks</a><span class="badge badge-primary badge-pill">14</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Games</a><span class="badge badge-primary badge-pill">2</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
           </ul>
         </section>
         <!-- End Label -->
