--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
     
     <!-- Logo + Responsive Img -->
     <div class="container py-3">
-      <div class="row">
-        <div class="col-sm-3 col-12">
-          <img class="mx-auto" src="https://placehold.it/300x175&amp;text=LOGO" height="100px" alt="" />
+      <div class="row justify-content-center">
+        <div class="col-sm-4 col-12">
+          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="" />
         </div>
-        <div class="col-sm col-12">
+        <div class="col-sm-8 col-12">
           <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement for deep fried Twinkies">
         </div>
       </div>
@@ -70,7 +70,7 @@
     <!-- Divided -->
     <div class="row">
       <!-- Article -->
-      <div class="col-12 col-md-9">
+      <div class="col-12 col-lg-9">
         <!-- Breadcrumbs -->
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb p-3 bg-light">
@@ -160,7 +160,7 @@
       <!-- End Article -->
 
       <!-- Sidebar -->
-      <aside class="col-12 col-md-3">
+      <aside class="col-12 col-lg-3">
         <!-- Popular Post -->
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
@@ -200,7 +200,7 @@
   <!-- Footer -->
   <footer class="navbar d-flex align-items-center">
     <div class="container-fluid">
-      <div id="about" class="col-6 mx-auto text-center">
+      <div id="about" class="col-lg-6 mx-auto text-center">
         <h5>Lorem Ipsum</h5>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quis animi nemo sunt fugit facilis culpa doloremque, corrupti necessitatibus unde mollitia possimus praesentium iusto, repellat accusamus! Porro eligendi esse sequi!</p>
       </div>
