--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
     <div class="container py-3">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12">
-          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="" />
+          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="company logo" />
         </div>
         <div class="col-sm-8 col-12">
-          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement for deep fried Twinkies">
+          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement">
         </div>
       </div>
     </div>
@@ -67,6 +67,9 @@
 
   <!-- Main Container -->
   <main class="container">
+    <div class="row">
+      <img class="img-fluid col-12" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="">
+    </div>
     <!-- Divided -->
     <div class="row">
       <!-- Article -->
