add article page

--- a/article.html
+++ b/article.html
@@ -67,10 +67,6 @@
 
   <!-- Main Container -->
   <main class="container">
-    <div class="row">
-      <img class="img-fluid col-12" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="">
-    </div>
-    <hr />
     <!-- Divided -->
     <div class="row">
       <!-- Article -->
@@ -79,75 +75,117 @@
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb p-3 bg-light">
             <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">All Posts</li>
+            <li class="breadcrumb-item" aria-current="page"><a href="#">Article</a></li>
+            <li class="breadcrumb-item active" aria-current="page">Lorem Ipsum Dolor</li>
           </ol>
         </nav>
         <!-- End Breadcrumbs -->
 
-        <!-- List Article -->
-        <div class="row">
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+        <!-- Article -->
+        <div class="border rounded p-3">
+          <article>
+            <h1>Lorem Ipsum dolor (Heading 1)</h1>
+            <small>Published a month ago</small>
+            <hr/>
+            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <h2>Lorem Ipsum dolor (Heading 2)</h2>
+            <p><strong>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            <ul>
+              <li>Lorem Ipsum dolor sit amet</li>
+              <li>consectetur adipiscing elit</li>
+              <li>Lorem Ipsum dolor sit amet</li>
+              <li>consectetur adipiscing elit</li>
+            </ul>
+  
+            <h3>Lorem Ipsum dolor (Heading 3)</h3>
+            <ol>
+              <li>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+              <li>Ut enim ad minim veniam</li>
+              <li>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
+              <li>Ut enim ad minim veniam</li>
+            </ol>
+            <h4>Lorem Ipsum dolor (Heading 4)</h4>
+            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+            
+            <h3>Table</h3>
+            <table class="table table-hover">
+              <thead>
+                <tr><th>Name</th><th>Status</th><th>Notes</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>Lorem</td><td>No Action</td><td>None</td></tr>
+                <tr><td>Ipsum</td><td>Approved</td><td>Requires call</td></tr>
+                <tr><td>Dolor</td><td>Denied</td><td>None</td></tr>
+                <tr><td>Sit</td><td>No Action</td><td>None</td></tr>
+                <tr><td>Amet</td><td>Approved</td><td>Requires call</td></tr>
+              </tbody>
+            </table>
+  
+            <h3>Tab</h3>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">First</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#second" role="tab" aria-controls="second" aria-selected="false">Second</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#third" role="tab" aria-controls="third" aria-selected="false">Third</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab">First. <br>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
+              <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab">Second. <br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+              <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab">Third. <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+            </div>
+  
+            <h3>Pop up (Tool Tip)</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas placeat velit accusamus officiis nisi quam sequi? Quod repudiandae voluptatum reprehenderit aspernatur, dolores numquam veritatis exercitationem deleniti? Rerum fugit aut fugiat.</p>
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
+            <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
+          </article>
+        </div>
+        <!-- End Article -->
+        <hr/>
+        <!-- Related Post -->
+        <h5 class="bg-light card-header p-3 rounded">Related Posts</h5>
+        <div id="related" class="row">
+          <div class="col-md-3">
+            <div class="card">
+              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
-            </article>
+            </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+          <div class="col-md-3">
+            <div class="card">
+              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
-            </article>
+            </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+          <div class="col-md-3">
+            <div class="card">
+              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
-            </article>
+            </div>
           </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+          <div class="col-md-3">
+            <div class="card">
+              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
                 <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
-            </article>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
-              <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
-              </div>
-            </article>
-          </div>
-          <div class="col-12 col-md-6 col-lg-4">
-            <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
-              <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
-              </div>
-            </article>
+            </div>
           </div>
         </div>
-        <!-- End List Article -->
+        <!-- End Related Post -->
 
         <!-- Pagination -->
         <nav aria-label="Page navigation">
@@ -160,12 +198,24 @@
           </ul>
         </nav>
         <!-- EndPagination -->
-
+        
+        <!-- Media Object -->
+        <!-- End Media Object -->
       </div>
       <!-- End Article -->
 
       <!-- Sidebar -->
       <aside class="col-12 col-lg-3">
+        <!-- Author -->
+        <section id="author" class="p-5 border rounded">
+          <div class="profil-pic text-center" style="">
+            <img src="https://placehold.it/250x250&text=Profile" class="rounded m-2" style="max-width:100px;" alt="Profile">
+            <h3>Author</h3>
+            <a href="#"><small>More by the Author</small></a>
+          </div>
+        </section>
+        <!-- End Author -->
+        <hr/>
         <!-- Popular Post -->
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
@@ -231,6 +281,9 @@
   <script src="assets/js/jquery-3.3.1.slim.min.js"></script>
   <script src="assets/js/popper.min.js"></script>
   <script src="assets/js/bootstrap.min.js"></script>
+  <script>
+  $(function () {$('[data-toggle="tooltip"]').tooltip()})
+  </script>
   <!-- End Script -->
 </body>
 </html>
