remove header color

--- a/article.html
+++ b/article.html
@@ -40,10 +40,10 @@
     <div class="container py-3">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12">
-          <img class="img-fluid" src="https://placehold.it/300x175/000000/ffffff&amp;text=LOGO" alt="company logo" />
+          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="company logo" />
         </div>
         <div class="col-sm-8 col-12">
-          <img class="img-fluid" src="https://placehold.it/750x175/000000/ffffff&amp;text=Responsive Img" alt="advertisement">
+          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement">
         </div>
       </div>
     </div>
