--- a/article.html
+++ b/article.html
@@ -20,9 +20,9 @@
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="" class="nav-item nav-link">Site Map</a>
-        <a href="" class="nav-item nav-link">Archives</a>
-        <a href="" class="nav-item nav-link">Pages</a>
+        <a href="static.html" class="nav-item nav-link">Site Map</a>
+        <a href="static.html" class="nav-item nav-link">Archives</a>
+        <a href="static.html" class="nav-item nav-link">Pages</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
@@ -39,11 +39,11 @@
     <!-- Logo + Responsive Img -->
     <div class="container py-3">
       <div class="row justify-content-center">
-        <div class="col-sm-4 col-12">
-          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="company logo" />
+        <div class="col-sm-4 col-12" id="logo">
+          <img class="img-fluid" src="assets/img/logo.png" alt="company logo" />
         </div>
-        <div class="col-sm-8 col-12">
-          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement">
+        <div class="col-sm-8 col-12" id="responsive-img">
+          <img class="img-fluid" src="https://placehold.it/850x90/007bff/ffffff/&amp;text=Responsive Img" alt="advertisement">
         </div>
       </div>
     </div>
@@ -84,43 +84,35 @@
         <!-- Article -->
         <div class="border rounded p-3">
           <article>
-            <h1>Lorem Ipsum dolor (Heading 1)</h1>
-            <small>Published a month ago</small>
+            <h1>Smartphone on Table</h1>
+            <small>Published a month ago</small> <small>by <a href="">Author</a></small>
             <hr/>
-            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <em>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</em> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <h2>Lorem Ipsum dolor (Heading 2)</h2>
-            <p><strong>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</strong> Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            <ul>
-              <li>Lorem Ipsum dolor sit amet</li>
-              <li>consectetur adipiscing elit</li>
-              <li>Lorem Ipsum dolor sit amet</li>
-              <li>consectetur adipiscing elit</li>
-            </ul>
-  
-            <h3>Lorem Ipsum dolor (Heading 3)</h3>
+            <img class="rounded mx-auto d-block img-thumbnail" src="assets/img/posts/post-1.jpg" alt="">
+            <p><strong>There are all kinds of choices and it might be tough for students and parents to determine where to begin.</strong> Students may find a big benefit when it comes to financing and loans. There are a multitude of websites devoted to student loans and certainly will offer you an abundance of information.</p>
+            <p>But most students who actually do take the choice of the loan are conscious of the seriousness of the responsibility that they shoulder. Should you be interested in an exclusive student loans, then you have to first do your homework concerning the loan in question along with the specific lending company. A student loan is merely money you borrow you have to repay with interest. As an alternative to having your refund, you might obtain a letter stating it has been sent to your own student loan lender instead.</p>
+            <h4>Below are the example of bullet list and numbered lists:</h4>
             <ol>
-              <li>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
-              <li>Ut enim ad minim veniam</li>
-              <li>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua</li>
-              <li>Ut enim ad minim veniam</li>
+              <li>List item one
+                <ul>
+                  <li>List item one
+                    <ol type="a">
+                      <li>List item one</li>
+                      <li>List item two</li>
+                      <li>List item three</li>
+                      <li>List item four</li>
+                    </ol>
+                  </li>
+                  <li>List item two</li>
+                  <li>List item three</li>
+                  <li>List item four</li>
+                </ul>
+                </li>
+              <li>List item two</li>
+              <li>List item three</li>
+              <li>List item four</li>
             </ol>
-            <h4>Lorem Ipsum dolor (Heading 4)</h4>
-            <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-            
-            <h3>Table</h3>
-            <table class="table table-hover">
-              <thead>
-                <tr><th>Name</th><th>Status</th><th>Notes</th></tr>
-              </thead>
-              <tbody>
-                <tr><td>Lorem</td><td>No Action</td><td>None</td></tr>
-                <tr><td>Ipsum</td><td>Approved</td><td>Requires call</td></tr>
-                <tr><td>Dolor</td><td>Denied</td><td>None</td></tr>
-                <tr><td>Sit</td><td>No Action</td><td>None</td></tr>
-                <tr><td>Amet</td><td>Approved</td><td>Requires call</td></tr>
-              </tbody>
-            </table>
-  
+            <p>Proactively managing your loans will help you save money and grow your credit history. It's possible to contact a handful of such lenders online with their different financial loan quotes. Students aren't at all burdened with heavy interests because these loans are given at lower rates of interest. Take a look at a web website that provides private student loans from several lenders.</p>
+            <hr/>
             <h3>Tab</h3>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
@@ -134,11 +126,25 @@
               </li>
             </ul>
             <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab">First. <br>Lorem Ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</div>
-              <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab">Second. <br>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
-              <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab">Third. <br>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</div>
+              <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab"><p>There are numerous options when it comes to student loans though, and it's important you know about them. There are certain ways that you are able to find more student loan money with an alternative student loan once you learn where to look. Getting an education is essential and you're probably going to have to obtain some loans, but don't have them control you. First, whenever you're looking at your own budget and figuring out just how much money you'll need for college you must always over exaggerate.</p></div>
+              <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab"><p>The next circumstance to employ a cosigner is always to get a loan with a lowly rate of interest. Banks offering student loans without a cosigner are extremely rare. You may even have rich or generous parents who are ready to help settle the bills. However, lots of students aren't so lucky.</p></div>
+              <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab"><p>Regardless, if you really do not have a credit score history, but still wish to apply to get a student loan with no cosigner, then the choices are limited. If you'd like private student loans without a cosigner and no credit score check, you'll need to check out a poor credit private student loan. Last, in regards to any sort of loan for schooling it really is important that you make sure the loans would not have to be repaid until you've graduated. There are lots of students, who just can't afford to repay the loans even when they've graduated. But, the massive downside to these kinds of loans is that you could not have the capability to cover your whole education with them.</p></div>
             </div>
-  
+            <hr>
+            <h4>Table</h4>
+            <table class="table table-hover">
+              <thead>
+                <tr><th>Name</th><th>Status</th><th>Notes</th></tr>
+              </thead>
+              <tbody>
+                <tr><td>John</td><td>No Action</td><td>None</td></tr>
+                <tr><td>Jane</td><td>Approved</td><td>Requires call</td></tr>
+                <tr><td>Doi</td><td>Denied</td><td>None</td></tr>
+                <tr><td>Wati</td><td>No Action</td><td>None</td></tr>
+                <tr><td>Lilis</td><td>Approved</td><td>Requires call</td></tr>
+              </tbody>
+            </table>
+            <hr>
             <h3>Pop up (Tool Tip)</h3>
             <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quas placeat velit accusamus officiis nisi quam sequi? Quod repudiandae voluptatum reprehenderit aspernatur, dolores numquam veritatis exercitationem deleniti? Rerum fugit aut fugiat.</p>
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="top" title="Tooltip on top">Tooltip on top</button>
@@ -151,36 +157,36 @@
         <hr/>
         <!-- Related Post -->
         <h5 class="bg-light card-header p-3 rounded">Related Posts</h5>
-        <div id="related" class="row">
+        <div id="related" class="row no-gutters">
           <div class="col-md-3">
             <div class="card">
-              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
+              <img src="assets/img/posts/post-1.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
+                <h5 class="card-title">Smartphone</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="card">
-              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
+              <img src="assets/img/posts/post-2.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
+                <h5 class="card-title">Beach and Hill</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="card">
-              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
+              <img src="assets/img/posts/post-3.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
+                <h5 class="card-title">Town across River</h5>
               </div>
             </div>
           </div>
           <div class="col-md-3">
             <div class="card">
-              <img src="https://placehold.it/300x250&text=Image" width="100%" alt="" class="card-img-top" />
+              <img src="assets/img/posts/post-4.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
+                <h5 class="card-title">Girl with Pumpkin</h5>
               </div>
             </div>
           </div>
@@ -208,8 +214,8 @@
       <aside class="col-12 col-lg-3">
         <!-- Author -->
         <section id="author" class="p-5 border rounded">
-          <div class="profil-pic text-center" style="">
-            <img src="https://placehold.it/250x250&text=Profile" class="rounded m-2" style="max-width:100px;" alt="Profile">
+          <div class="profil-pic text-center">
+            <img src="assets/img/profile.jpg" class="rounded m-2" style="max-width:100px;" alt="Profile">
             <h3>Author</h3>
             <a href="#"><small>More by the Author</small></a>
           </div>
@@ -220,11 +226,11 @@
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
           <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Cras justo odio</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Lorem ipsum</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dapibus ac facilisis in</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Morbi leo risus</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dolor sit amet</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Smartphone on Table</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Beach and Hill</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Town across the River</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Girl with Pumpkin</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Lake in British</a></li>
           </ul>
         </section>
         <!-- End Popular Post -->
@@ -256,17 +262,17 @@
   <footer class="navbar d-flex align-items-center">
     <div class="container-fluid">
       <div id="about" class="col-lg-6 mx-auto text-center">
-        <h5>Lorem Ipsum</h5>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quis animi nemo sunt fugit facilis culpa doloremque, corrupti necessitatibus unde mollitia possimus praesentium iusto, repellat accusamus! Porro eligendi esse sequi!</p>
+        <h5>About Bootstrap</h5>
+        <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
       </div>
     </div>
     <!-- Footer Bar -->
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="" class="nav-item nav-link">About</a>
-        <a href="" class="nav-item nav-link">Privacy</a>
-        <a href="" class="nav-item nav-link">Disclaimer</a>
+        <a href="static.html" class="nav-item nav-link">About</a>
+        <a href="static.html" class="nav-item nav-link">Privacy</a>
+        <a href="static.html" class="nav-item nav-link">Disclaimer</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
