--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="" class="nav-item nav-link">Site Map</a>
-        <a href="" class="nav-item nav-link">Archives</a>
-        <a href="" class="nav-item nav-link">Pages</a>
+        <a href="static.html" class="nav-item nav-link">Site Map</a>
+        <a href="static.html" class="nav-item nav-link">Archives</a>
+        <a href="static.html" class="nav-item nav-link">Pages</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
@@ -39,11 +39,11 @@
     <!-- Logo + Responsive Img -->
     <div class="container py-3">
       <div class="row justify-content-center">
-        <div class="col-sm-4 col-12">
-          <img class="img-fluid" src="https://placehold.it/300x175&amp;text=LOGO" alt="company logo" />
+        <div class="col-sm-4 col-12" id="logo">
+          <img class="img-fluid" src="https://placehold.it/250x90/007bff/ffffff/&amp;text=Logo" alt="company logo" />
         </div>
-        <div class="col-sm-8 col-12">
-          <img class="img-fluid" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="advertisement">
+        <div class="col-sm-8 col-12" id="responsive-img">
+          <img class="img-fluid" src="https://placehold.it/850x90/007bff/ffffff/&amp;text=Responsive Img" alt="advertisement">
         </div>
       </div>
     </div>
@@ -88,60 +88,72 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-1.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Smartphone on Table</h5>
+                <p class="card-text">Sony on the table being captured by Samsung smartphone.</p>
                 <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-2.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <h5 class="card-title">Beach and Hill</h5>
+                <p class="card-text">Beach and hill being captured by drone from above the high.</p>
+                <p class="card-text"><small class="text-muted">16 Agustus 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-3.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <h5 class="card-title">Town across the River</h5>
+                <p class="card-text">Small town being captured by Samsung smartphone at dusk.</p>
+                <p class="card-text"><small class="text-muted">13 Agustus 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-4.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <h5 class="card-title">Girl with Pumpkin</h5>
+                <p class="card-text">Girl with pumpkin being captured in the forest.</p>
+                <p class="card-text"><small class="text-muted">8 Agustus 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-5.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <h5 class="card-title">Lake in British</h5>
+                <p class="card-text">One lake in British being captured at noon.</p>
+                <p class="card-text"><small class="text-muted">5 Agustus 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <img src="https://placehold.it/600x450&text=Image" width="100%" alt="" class="card-img-top" />
+              <a href="article.html">
+                <img src="assets/img/posts/post-6.jpg" width="100%" alt="" class="card-img-top" />
+              </a>
               <div class="card-body">
-                <h5 class="card-title">Lorem Ipsum</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                <h5 class="card-title">Table Sets</h5>
+                <p class="card-text">Sets of devce being captured on the table.</p>
                 <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
               </div>
             </article>
@@ -170,11 +182,11 @@
         <section id="popular">
           <h5 class="bg-light card-header p-3 rounded">Popular Posts</h5>
           <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Cras justo odio</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Lorem ipsum</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dapibus ac facilisis in</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Morbi leo risus</a></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Dolor sit amet</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Smartphone on Table</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Beach and Hill</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Town across the River</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Girl with Pumpkin</a></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="article.html">Lake in British</a></li>
           </ul>
         </section>
         <!-- End Popular Post -->
@@ -183,12 +195,12 @@
         <section id="label">
           <h5 class="bg-light card-header p-3 rounded">Label</h5>
           <ul class="list-group">
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Movies</a><span class="badge badge-primary badge-pill">14</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Games</a><span class="badge badge-primary badge-pill">2</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Life Hacks</a><span class="badge badge-primary badge-pill">14</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Games</a><span class="badge badge-primary badge-pill">2</span></li>
-            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Movies</a><span class="badge badge-primary badge-pill">14</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Games</a><span class="badge badge-primary badge-pill">2</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Life Hacks</a><span class="badge badge-primary badge-pill">14</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Games</a><span class="badge badge-primary badge-pill">2</span></li>
+            <li class="list-group-item d-flex justify-content-between align-items-center"><a href="index.html">Aplication</a><span class="badge badge-primary badge-pill">1</span></li>
           </ul>
         </section>
         <!-- End Label -->
@@ -206,17 +218,17 @@
   <footer class="navbar d-flex align-items-center">
     <div class="container-fluid">
       <div id="about" class="col-lg-6 mx-auto text-center">
-        <h5>Lorem Ipsum</h5>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Harum quis animi nemo sunt fugit facilis culpa doloremque, corrupti necessitatibus unde mollitia possimus praesentium iusto, repellat accusamus! Porro eligendi esse sequi!</p>
+        <h5>About Bootstrap</h5>
+        <p>Bootstrap is an open source toolkit for developing with HTML, CSS, and JS. Quickly prototype your ideas or build your entire app with our Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful plugins built on jQuery.</p>
       </div>
     </div>
     <!-- Footer Bar -->
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="" class="nav-item nav-link">About</a>
-        <a href="" class="nav-item nav-link">Privacy</a>
-        <a href="" class="nav-item nav-link">Disclaimer</a>
+        <a href="static.html" class="nav-item nav-link">About</a>
+        <a href="static.html" class="nav-item nav-link">Privacy</a>
+        <a href="static.html" class="nav-item nav-link">Disclaimer</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
