--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <div class="container py-3">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12" id="logo">
-          <img class="img-fluid" src="https://placehold.it/250x90/007bff/ffffff/&amp;text=Logo" alt="company logo" />
+          <img class="img-fluid" src="assets/img/logo.png" alt="company logo" />
         </div>
         <div class="col-sm-8 col-12" id="responsive-img">
           <img class="img-fluid" src="https://placehold.it/850x90/007bff/ffffff/&amp;text=Responsive Img" alt="advertisement">
@@ -68,7 +68,7 @@
   <!-- Main Container -->
   <main class="container">
     <div class="row">
-      <img class="img-fluid col-12" src="https://placehold.it/750x175&amp;text=Responsive Img" alt="">
+      <img class="img-fluid col-12" src="https://source.unsplash.com/WLUHO9A_xik/1280x350" alt="featured img">
     </div>
     <hr />
     <!-- Divided -->
