home, index, static done

--- a/index.html
+++ b/index.html
@@ -20,9 +20,9 @@
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="static.html" class="nav-item nav-link">Site Map</a>
-        <a href="static.html" class="nav-item nav-link">Archives</a>
-        <a href="static.html" class="nav-item nav-link">Pages</a>
+        <a href="index.html" class="nav-item nav-link">Site Map</a>
+        <a href="index.html" class="nav-item nav-link">Archives</a>
+        <a href="index.html" class="nav-item nav-link">Pages</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
@@ -52,11 +52,11 @@
     <!-- Navbar Menu -->
     <div class="container-fluid">
       <ul class="nav w-100 overflow justify-content-center">
-        <li class="nav-item"><a class="nav-link" href="#">Tutorials</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Reviews</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">News</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Books</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Softwares</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Tutorials</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Reviews</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">News</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Books</a></li>
+        <li class="nav-item"><a class="nav-link" href="index.html">Softwares</a></li>
       </ul>
     </div>
     <!-- End Navbar Menu -->
@@ -88,73 +88,73 @@
         <div class="row">
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-1.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-1.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Smartphone on Table</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Smartphone on Table</h5>
+                </a>
                 <p class="card-text">Sony on the table being captured by Samsung smartphone.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">23 August 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-2.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-2.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Beach and Hill</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Beach and Hill</h5>
+                </a>
                 <p class="card-text">Beach and hill being captured by drone from above the high.</p>
-                <p class="card-text"><small class="text-muted">16 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">16 August 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-3.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-3.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Town across the River</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Town across the River</h5>
+                </a>
                 <p class="card-text">Small town being captured by Samsung smartphone at dusk.</p>
-                <p class="card-text"><small class="text-muted">13 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">13 August 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-4.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-4.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Girl with Pumpkin</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Girl with Pumpkin</h5>
+                </a>
                 <p class="card-text">Girl with pumpkin being captured in the forest.</p>
-                <p class="card-text"><small class="text-muted">8 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">8 August 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-5.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-5.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Lake in British</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Lake in British</h5>
+                </a>
                 <p class="card-text">One lake in British being captured at noon.</p>
-                <p class="card-text"><small class="text-muted">5 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">5 August 2019</small></p>
               </div>
             </article>
           </div>
           <div class="col-12 col-md-6 col-lg-4">
             <article class="card">
-              <a href="article.html">
-                <img src="assets/img/posts/post-6.jpg" width="100%" alt="" class="card-img-top" />
-              </a>
+              <img src="assets/img/posts/post-6.jpg" width="100%" alt="" class="card-img-top" />
               <div class="card-body">
-                <h5 class="card-title">Table Sets</h5>
+                <a href="article.html">
+                  <h5 class="card-title">Table Sets</h5>
+                </a>
                 <p class="card-text">Sets of devce being captured on the table.</p>
-                <p class="card-text"><small class="text-muted">23 Agustus 2019</small></p>
+                <p class="card-text"><small class="text-muted">23 August 2019</small></p>
               </div>
             </article>
           </div>
