--- a/article.html
+++ b/article.html
@@ -20,9 +20,9 @@
     <div class="container-fluid d-flex align-items-center">
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
         <!-- Menu -->
-        <a href="static.html" class="nav-item nav-link">Site Map</a>
-        <a href="static.html" class="nav-item nav-link">Archives</a>
-        <a href="static.html" class="nav-item nav-link">Pages</a>
+        <a href="index.html" class="nav-item nav-link">Site Map</a>
+        <a href="index.html" class="nav-item nav-link">Archives</a>
+        <a href="index.html" class="nav-item nav-link">Pages</a>
         <!-- End Menu -->
       </nav>
       <nav class="nav mx-auto mx-md-0 m-0 px-0">
@@ -74,9 +74,9 @@
         <!-- Breadcrumbs -->
         <nav aria-label="breadcrumb">
           <ol class="breadcrumb p-3 bg-light">
-            <li class="breadcrumb-item" aria-current="page"><a href="#">Home</a></li>
+            <li class="breadcrumb-item" aria-current="page"><a href="index.html">Home</a></li>
             <li class="breadcrumb-item" aria-current="page"><a href="#">Article</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Lorem Ipsum Dolor</li>
+            <li class="breadcrumb-item active" aria-current="page">Smartphone on Table</li>
           </ol>
         </nav>
         <!-- End Breadcrumbs -->
@@ -87,7 +87,7 @@
             <h1>Smartphone on Table</h1>
             <small>Published a month ago</small> <small>by <a href="">Author</a></small>
             <hr/>
-            <img class="rounded mx-auto d-block img-thumbnail" src="assets/img/posts/post-1.jpg" alt="">
+            <img class="rounded mx-auto d-block" src="assets/img/posts/post-1.jpg" alt="">
             <p><strong>There are all kinds of choices and it might be tough for students and parents to determine where to begin.</strong> Students may find a big benefit when it comes to financing and loans. There are a multitude of websites devoted to student loans and certainly will offer you an abundance of information.</p>
             <p>But most students who actually do take the choice of the loan are conscious of the seriousness of the responsibility that they shoulder. Should you be interested in an exclusive student loans, then you have to first do your homework concerning the loan in question along with the specific lending company. A student loan is merely money you borrow you have to repay with interest. As an alternative to having your refund, you might obtain a letter stating it has been sent to your own student loan lender instead.</p>
             <h4>Below are the example of bullet list and numbered lists:</h4>
@@ -112,25 +112,6 @@
               <li>List item four</li>
             </ol>
             <p>Proactively managing your loans will help you save money and grow your credit history. It's possible to contact a handful of such lenders online with their different financial loan quotes. Students aren't at all burdened with heavy interests because these loans are given at lower rates of interest. Take a look at a web website that provides private student loans from several lenders.</p>
-            <hr/>
-            <h3>Tab</h3>
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">First</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#second" role="tab" aria-controls="second" aria-selected="false">Second</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#third" role="tab" aria-controls="third" aria-selected="false">Third</a>
-              </li>
-            </ul>
-            <div class="tab-content" id="myTabContent">
-              <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab"><p>There are numerous options when it comes to student loans though, and it's important you know about them. There are certain ways that you are able to find more student loan money with an alternative student loan once you learn where to look. Getting an education is essential and you're probably going to have to obtain some loans, but don't have them control you. First, whenever you're looking at your own budget and figuring out just how much money you'll need for college you must always over exaggerate.</p></div>
-              <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab"><p>The next circumstance to employ a cosigner is always to get a loan with a lowly rate of interest. Banks offering student loans without a cosigner are extremely rare. You may even have rich or generous parents who are ready to help settle the bills. However, lots of students aren't so lucky.</p></div>
-              <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab"><p>Regardless, if you really do not have a credit score history, but still wish to apply to get a student loan with no cosigner, then the choices are limited. If you'd like private student loans without a cosigner and no credit score check, you'll need to check out a poor credit private student loan. Last, in regards to any sort of loan for schooling it really is important that you make sure the loans would not have to be repaid until you've graduated. There are lots of students, who just can't afford to repay the loans even when they've graduated. But, the massive downside to these kinds of loans is that you could not have the capability to cover your whole education with them.</p></div>
-            </div>
-            <hr>
             <h4>Table</h4>
             <table class="table table-hover">
               <thead>
@@ -151,13 +132,32 @@
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="right" title="Tooltip on right">Tooltip on right</button>
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="bottom" title="Tooltip on bottom">Tooltip on bottom</button>
             <button type="button" class="btn btn-secondary" data-toggle="tooltip" data-placement="left" title="Tooltip on left">Tooltip on left</button>
+            <hr/>
+            <h3>Tab</h3>
+            <ul class="nav nav-tabs" id="myTab" role="tablist">
+              <li class="nav-item">
+                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#first" role="tab" aria-controls="first" aria-selected="true">First</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#second" role="tab" aria-controls="second" aria-selected="false">Second</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" id="contact-tab" data-toggle="tab" href="#third" role="tab" aria-controls="third" aria-selected="false">Third</a>
+              </li>
+            </ul>
+            <div class="tab-content" id="myTabContent">
+              <div class="tab-pane fade show active" id="first" role="tabpanel" aria-labelledby="first-tab"><p>There are numerous options when it comes to student loans though, and it's important you know about them. There are certain ways that you are able to find more student loan money with an alternative student loan once you learn where to look. Getting an education is essential and you're probably going to have to obtain some loans, but don't have them control you. First, whenever you're looking at your own budget and figuring out just how much money you'll need for college you must always over exaggerate.</p></div>
+              <div class="tab-pane fade" id="second" role="tabpanel" aria-labelledby="second-tab"><p>The next circumstance to employ a cosigner is always to get a loan with a lowly rate of interest. Banks offering student loans without a cosigner are extremely rare. You may even have rich or generous parents who are ready to help settle the bills. However, lots of students aren't so lucky.</p></div>
+              <div class="tab-pane fade" id="third" role="tabpanel" aria-labelledby="third-tab"><p>Regardless, if you really do not have a credit score history, but still wish to apply to get a student loan with no cosigner, then the choices are limited. If you'd like private student loans without a cosigner and no credit score check, you'll need to check out a poor credit private student loan. Last, in regards to any sort of loan for schooling it really is important that you make sure the loans would not have to be repaid until you've graduated. There are lots of students, who just can't afford to repay the loans even when they've graduated. But, the massive downside to these kinds of loans is that you could not have the capability to cover your whole education with them.</p></div>
+            </div>
+            <hr>
           </article>
         </div>
         <!-- End Article -->
         <hr/>
         <!-- Related Post -->
         <h5 class="bg-light card-header p-3 rounded">Related Posts</h5>
-        <div id="related" class="row no-gutters">
+        <div id="related" class="row">
           <div class="col-md-3">
             <div class="card">
               <img src="assets/img/posts/post-1.jpg" width="100%" alt="" class="card-img-top" />
@@ -192,20 +192,32 @@
           </div>
         </div>
         <!-- End Related Post -->
-
-        <!-- Pagination -->
-        <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-center my-3">
-            <li class="page-item disabled"><a class="page-link" href="#" tabindex="-1" aria-disabled="true">Prev.</a></li>
-            <li class="page-item"><a class="page-link" href="#">1</a></li>
-            <li class="page-item"><a class="page-link" href="#">2</a></li>
-            <li class="page-item"><a class="page-link" href="#">3</a></li>
-            <li class="page-item"><a class="page-link" href="#">Next.</a></li>
-          </ul>
-        </nav>
-        <!-- EndPagination -->
         
         <!-- Media Object -->
+        <h5 class="bg-light card-header p-3 rounded">Comment</h5>
+        <ul class="list-unstyled">
+          <li class="media">
+            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">List-based media object</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </li>
+          <li class="media my-4">
+            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">List-based media object</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </li>
+          <li class="media">
+            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
+            <div class="media-body">
+              <h5 class="mt-0 mb-1">List-based media object</h5>
+              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+            </div>
+          </li>
+        </ul>
         <!-- End Media Object -->
       </div>
       <!-- End Article -->
