--- a/article.html
+++ b/article.html
@@ -192,43 +192,61 @@
           </div>
         </div>
         <!-- End Related Post -->
-        
+        <hr>
         <!-- Media Object -->
         <h5 class="bg-light card-header p-3 rounded">Comment</h5>
-        <ul class="list-unstyled">
-          <li class="media">
-            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+        <div class="media my-3">
+          <div class="media-img">
+            <img src="assets/img/pp (1).jpg" class="align-self-center mr-3 img-fluid" alt="...">
+          </div>
+          <div class="media-body mx-2">
+            <h5 class="my-0">Suou Amane-chan</h5>
+            <p>This has been very useful for my research. Thanks as well!</p>
+            <a href="#"><small>Reply</small></a>
+            <div class="media my-3">
+              <div class="media-img">
+                <img src="assets/img/pp (2).jpg" class="align-self-center mr-3 img-fluid" alt="...">
+              </div>
+              <div class="media-body mx-2">
+                <h5 class="my-0">Admin-nee</h5>
+                <p>Thanks.</p>
+                <a href="#"><small>Reply</small></a>
+              </div>
             </div>
-          </li>
-          <li class="media my-4">
-            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
+          </div>
+        </div>
+        <div class="media my-3">
+          <div class="media-img">
+            <img src="assets/img/pp (3).jpg" class="align-self-center mr-3 img-fluid" alt="">
+          </div>
+          <div class="media-body mx-2">
+            <h5 class="my-0">Yukino-san</h5>
+            <p>It's useful.</p>
+            <a href="#"><small>Reply</small></a>
+            <div class="media my-3">
+              <div class="media-img">
+                <img src="assets/img/pp (2).jpg" class="align-self-center mr-3 img-fluid" alt="...">
+              </div>
+              <div class="media-body mx-2">
+                <h5 class="my-0">Admin-nee</h5>
+                <textarea class="form-control my-2" form-control" name="" rows="3"></textarea>
+                <button class="btn btn-primary">Reply</button>
+              </div>
             </div>
-          </li>
-          <li class="media">
-            <img src="https://www.placehold.it/64x64" class="mr-3" alt="">
-            <div class="media-body">
-              <h5 class="mt-0 mb-1">List-based media object</h5>
-              Cras sit amet nibh libero, in gravida nulla. Nulla vel metus scelerisque ante sollicitudin. Cras purus odio, vestibulum in vulputate at, tempus viverra turpis. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus.
-            </div>
-          </li>
-        </ul>
+          </div>
+        </div>
         <!-- End Media Object -->
       </div>
       <!-- End Article -->
-
+      
       <!-- Sidebar -->
       <aside class="col-12 col-lg-3">
         <!-- Author -->
+        <h5 class="bg-light card-header p-3 rounded">Author</h5>
         <section id="author" class="p-5 border rounded">
           <div class="profil-pic text-center">
             <img src="assets/img/profile.jpg" class="rounded m-2" style="max-width:100px;" alt="Profile">
-            <h3>Author</h3>
+            <h3>Admin-nee</h3>
             <a href="#"><small>More by the Author</small></a>
           </div>
         </section>
