fix img thumbnail

--- a/article.html
+++ b/article.html
@@ -87,7 +87,7 @@
             <h1>Smartphone on Table</h1>
             <small>Published a month ago</small> <small>by <a href="">Author</a></small>
             <hr/>
-            <img class="rounded mx-auto d-block" src="assets/img/posts/post-1.jpg" alt="">
+            <img class="rounded mx-auto d-block" style="max-width:100%;" src="assets/img/posts/post-1.jpg" alt="">
             <p><strong>There are all kinds of choices and it might be tough for students and parents to determine where to begin.</strong> Students may find a big benefit when it comes to financing and loans. There are a multitude of websites devoted to student loans and certainly will offer you an abundance of information.</p>
             <p>But most students who actually do take the choice of the loan are conscious of the seriousness of the responsibility that they shoulder. Should you be interested in an exclusive student loans, then you have to first do your homework concerning the loan in question along with the specific lending company. A student loan is merely money you borrow you have to repay with interest. As an alternative to having your refund, you might obtain a letter stating it has been sent to your own student loan lender instead.</p>
             <h4>Below are the example of bullet list and numbered lists:</h4>
