--- a/static.html
+++ b/static.html
@@ -116,6 +116,7 @@
               <div class="form-group">
                 <label for="inputCateg">Contact Category</label>
                 <select class="custom-select" id="inputCateg" required>
+                  <option value=""></option>
                   <option value="Question">Question</option>
                   <option value="Request">Request</option>
                   <option value="Help">Help</option>
