--- a/static.html
+++ b/static.html
@@ -40,7 +40,9 @@
     <div class="container py-3">
       <div class="row justify-content-center">
         <div class="col-sm-4 col-12" id="logo">
-          <img class="img-fluid" src="assets/img/logo.png" alt="company logo" />
+          <a href="index.html">
+            <img class="img-fluid" src="assets/img/logo.png" alt="company logo" />
+          </a>
         </div>
         <div class="col-sm-8 col-12" id="responsive-img">
           <img class="img-fluid" src="https://placehold.it/850x90/007bff/ffffff/&amp;text=Responsive Img" alt="advertisement">
