--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
   <!-- Main Container -->
   <main class="container">
     <div class="row">
-      <img class="img-fluid col-12" src="https://source.unsplash.com/WLUHO9A_xik/1280x350" alt="featured img">
+      <img class="img-fluid col-12" src="assets/img/leaderboard.jpg" alt="featured img">
     </div>
     <hr />
     <!-- Divided -->
